[package]
name = "codelldb"
version = "1.0.0"
authors = ["Vadim Chugunov <vadimcn@gmail.com>"]
edition = "2018"

[dependencies]
backtrace = "0.3.37"
base64 = "0.12.3"
clap = "2.33.0"
crossterm = "0.9.6"
dotenvy = "0.15.7"
env_logger = { version = "0.8.3", default-features = false }
fuzzy-matcher = "0.3.7"
lazy_static = "1.3.0"
libc = "0.2.59"
log = "0.4.7"
nom = "7.1.1"
parse_int = "0.5.0"
serde = "1.0.94"
serde_derive = "1.0.94"
serde_json = { version = "1.0.40", features = ["raw_value"] }
superslice = "1.0.0"

bytes = "1.0.0"
futures = "0.3.0"
tokio = { version = "1.0.0", features = ["full"] }
tokio-util = { version = "0.6.0", features = ["codec"] }

lldb = { path = "crates/lldb" }
loading = { path = "crates/loading" }
adapter_protocol = { package = "adapter-protocol", path = "crates/adapter-protocol" }

[target.'cfg(unix)'.dependencies]
termios = "0.3.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["std", "wincon", "namedpipeapi"] }
winreg = "0.6.2"

[lib]
crate-type = ["staticlib"]

[[bin]]
name = "codelldb"
path = "loader/main.rs"

[features]
weak-linkage = ["lldb/weak-linkage"]
