[package]
name = "codelldb"
version = "1.0.0"
authors = ["Vadim Chugunov <vadimcn@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.4.11"
backtrace = "0.3.37"
clap = "2.33.0"
crossterm = "0.9.6"
env_logger = "0.6.2"
futures = "0.1.28"
lazy_static = "1.3.0"
libc = "0.2.59"
log = "0.4.7"
regex = "1.1.9"
serde = "1.0.94"
serde_derive = "1.0.94"
serde_json = "1.0.40"
semver = "0.9.0"
superslice = "1.0.0"
tokio = "0.1.22"

lldb = { path = "deps/lldb" }
loading = { path = "deps/loading" }
raw_debug_protocol = { package = "debug-protocol", path = "deps/debug-protocol" }

[target.'cfg(unix)'.dependencies]
termios = "0.3.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["wincon"] }
winreg = "0.6.2"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "codelldb"
path = "loader/main.rs"

[features]
weak-linkage = ["lldb/weak-linkage"]
