[package]
authors = ["Vadim Chugunov <vadimcn@gmail.com>"]
edition = "2021"
name = "codelldb"
version = "1.0.0"

[dependencies]
adapter_protocol = {package = "adapter-protocol", path = "../adapter-protocol"}
lldb = {path = "../lldb"}
lldb-stub = {path = "../lldb-stub"}

backtrace = "0.3.37"
base64 = "0.12.3"
bytes = "1.0.0"
clap = "2.33.0"
crossterm = "0.9.6"
dotenvy = "0.15.7"
env_logger = {version = "0.8.3", default-features = false}
futures = "0.3.0"
fuzzy-matcher = "0.3.7"
lazy_static = "1.3.0"
libc = "0.2.59"
log = "0.4.7"
nom = "7.1.1"
parse_int = "0.5.0"
regex-lite = "0.1.6"
serde = "1.0.94"
serde_derive = "1.0.94"
serde_json = {version = "1.0.40", features = ["raw_value"]}
tokio = {version = "1.0.0", features = ["full"]}
tokio-util = {version = "0.6.0", features = ["codec"]}

[target.'cfg(unix)'.dependencies]
termios = "0.3.1"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3.8", features = ["std", "wincon", "namedpipeapi"]}

[dev-dependencies]
ctor = "0.4.2"

[features]
no_link_args = ["lldb/no_link_args"] # Use weak linkage for liblldb

[lib]
path = "src/lib.rs"

[[bin]]
name = "codelldb"
path = "bin/main.rs"
