[package]
edition = "2021"
name = "codelldb-launch"
version = "0.1.0"

[dependencies]
codelldb-types = {path = "../codelldb-types"}
clap = {version = "4.5", default-features=false, features = ["std", "derive", "help", "usage"]}
libc = "0.2"
serde = "1.0"
serde_json = "1.0"
clearscreen = "4.0.2"

[target.'cfg(unix)'.dependencies]
termios = "0.3.1"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3.8", features = ["std", "wincon"]}
socket2 = "0.6.1"
